fix: security & production hardening — CORS, logging, remove AGPL iText